<resources>
    <string name="app_name">DFinger runway analysis tool (WIP)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twoFASubmit">Submit</string>
    <string name="please_enter_your_2fa_code">Please enter your 2FA code</string>
    <string name="login">Username or email</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="signup">New user? tap here to sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="email_example">example@example.com</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="logging_you_in">Logging you in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">LOADING</string>
</resources>